--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jotai": "^2.15.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.64.0",
     "react-native": "0.81.4",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-paper": "^5.14.5",
@@ -41,7 +42,8 @@
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
     "react-native-web": "~0.21.0",
-    "react-native-worklets": "0.5.1"
+    "react-native-worklets": "0.5.1",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
