--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "web": "expo start --web",
     "lint": "expo lint"
   },
+  "prettier": {
+    "trailingComma": "all"
+  },
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
     "@hookform/resolvers": "^5.2.2",
