--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/material-top-tabs": "^7.3.8",
     "@react-navigation/native": "^7.1.8",
+    "deepmerge": "^4.3.1",
     "expo": "~54.0.13",
+    "expo-blur": "~15.0.7",
     "expo-constants": "~18.0.9",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
