--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "@react-navigation/native": "^7.1.8",
     "deepmerge": "^4.3.1",
     "expo": "~54.0.13",
+    "expo-audio": "~1.0.13",
     "expo-blur": "~15.0.7",
     "expo-constants": "~18.0.9",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.9",
+    "expo-image-picker": "~17.0.8",
     "expo-linking": "~8.0.8",
     "expo-navigation-bar": "~5.0.8",
     "expo-router": "^6.0.12",
