--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "expo-web-browser": "~15.0.8",
     "firebase": "^12.4.0",
     "jotai": "^2.15.0",
+    "lottie-react-native": "^7.3.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.64.0",
